Bug 288726 - Preview settings don't change until dolphin restarts
Summary: Preview settings don't change until dolphin restarts
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: investigated
Depends on:
Blocks:
 
Reported: 2011-12-11 14:47 UTC by Todd
Modified: 2011-12-21 20:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
sets the m_enabledplugins in kFileItemModelRolesUpdater (2.03 KB, patch)
2011-12-17 12:57 UTC, A JANARDHAN REDDY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Todd 2011-12-11 14:47:51 UTC
Version:           1.99 (using Devel) 
OS:                Linux

If you change which file formats have previews in dolphin, the previews in the file view don't change immediately.  You need to close dolphin and re-start it to see the previews enabled or disabled.

Reproducible: Always

Steps to Reproduce:
Assuming default settings (image previews enabled)

1. Go to a folder that has images
2. Enable previews
3. Select wrench -> configure dolphin
4. Select General -> previews
5. Disable both "Images" and "Jpeg images"
6. Click "OK"

Actual Results:  
1. The folder refreshes
2. The previews remain visible

Expected Results:  
1. The folder refreshes
2. The previews disappear

This happens with other file types (tested with .txt files and .desktop files).
Comment 1 Frank Reininghaus 2011-12-12 22:46:09 UTC
Thanks, I can confirm this regression in master.

Note that the new preview settings are applied immediately to new tabs and new split views.
Comment 2 Frank Reininghaus 2011-12-12 23:27:09 UTC
The reason is that KFileItemModelRolesUpdater sets its "m_enabledPlugins" member in its constructor, but it is currently not updated when the user changes the preview settings.
Comment 3 A JANARDHAN REDDY 2011-12-17 12:57:57 UTC
Created attachment 66831 [details]
sets the m_enabledplugins in kFileItemModelRolesUpdater

It updates the m_enabledplugins but already shown previews won't change.
Comment 4 Peter Penz 2011-12-21 20:48:06 UTC
Git commit 8152ff4f6bbfe13eea8a56ade04e4697cab4c68d by Peter Penz.
Committed on 21/12/2011 at 21:45.
Pushed by ppenz into branch 'KDE/4.8'.

Update previews when the preview-plugin settings have changed

Thanks to Janardhan Reddy for the initial patch.

BUG: 288726
FIXED-IN: 4.8.0

M  +13   -4    dolphin/src/kitemviews/kfileitemlistview.cpp
M  +17   -0    dolphin/src/kitemviews/kfileitemlistview.h
M  +11   -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +1    -4    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h
M  +7    -0    dolphin/src/views/dolphinitemlistcontainer.cpp

http://commits.kde.org/kde-baseapps/8152ff4f6bbfe13eea8a56ade04e4697cab4c68d
Comment 5 Peter Penz 2011-12-21 20:48:45 UTC
Git commit 9f3cba487976536c619e4f0e275107f6ee910153 by Peter Penz.
Committed on 21/12/2011 at 21:45.
Pushed by ppenz into branch 'master'.

Update previews when the preview-plugin settings have changed

Thanks to Janardhan Reddy for the initial patch.

BUG: 288726
FIXED-IN: 4.8.0

M  +13   -4    dolphin/src/kitemviews/kfileitemlistview.cpp
M  +17   -0    dolphin/src/kitemviews/kfileitemlistview.h
M  +11   -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +1    -4    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h
M  +7    -0    dolphin/src/views/dolphinitemlistcontainer.cpp

http://commits.kde.org/kde-baseapps/9f3cba487976536c619e4f0e275107f6ee910153