Update previews when the preview-plugin settings have changed

Thanks to Janardhan Reddy for the initial patch.

BUG: 288726
FIXED-IN: 4.8.0